--- a/index.html
+++ b/index.html
@@ -9,14 +9,11 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
-  <!-- Mercado Pago SDK -->
-  <script src="https://sdk.mercadopago.com/js/v2"></script>
   <style>
     :root { --brand: #22c55e; }
     body { font-family: 'Inter', system-ui, -apple-system, Segoe UI, Roboto, 'Helvetica Neue', Arial, 'Noto Sans', 'Liberation Sans', sans-serif; }
     .container { max-width: 980px; }
     .shadow-soft { box-shadow: 0 10px 25px rgba(2, 6, 23, 0.08); }
-    #popupPagamento { display:none; position:fixed; inset:0; background:rgba(0,0,0,0.5); backdrop-filter:blur(3px); z-index:1000; }
     .hidden { display: none !important; }
 
     /* ===== BOX da pergunta (degradê verde) ===== */
@@ -37,7 +34,7 @@
       position: relative;
       background: none;
       font-size: 1.25rem;
-      font-weight: 700;
+      font-weight: 800;
       color: #064e3b;
       margin-bottom: 10px;
       padding: 0 4px;
@@ -183,41 +180,32 @@
 
         <div class="mt-6 p-5 rounded-2xl bg-emerald-50 border border-emerald-200">
           <h3 class="font-bold">Receba seu plano personalizado no WhatsApp</h3>
-          <p class="text-slate-700 mt-1">Preencha seu nome e número. Após o pagamento de <strong>R$ 9,90</strong>, enviamos o plano completo.</p>
-          <form id="leadForm" class="mt-3 grid md:grid-cols-3 gap-3" onsubmit="return handleLead(event)">
+          <p class="text-slate-700 mt-1">Preencha seus dados. Após o pagamento de <strong>R$ 9,90</strong>, enviamos o plano completo.</p>
+          <!-- agora com e-mail -->
+          <form id="leadForm" class="mt-3 grid md:grid-cols-4 gap-3" onsubmit="return handleLead(event)">
             <input id="nome" type="text" required placeholder="Seu nome" class="rounded-xl border-slate-300" />
+            <input id="email" type="email" required placeholder="Seu e-mail" class="rounded-xl border-slate-300" />
             <input id="whats" type="tel" inputmode="tel" required placeholder="(61) 9 9999-9999" class="rounded-xl border-slate-300" />
             <button class="rounded-xl px-6 py-3 bg-[var(--brand)] text-white font-semibold">Continuar</button>
           </form>
-          <p id="leadOk" class="hidden text-emerald-700 text-sm mt-2">Quase lá! Abra o pagamento para liberar seu plano completo.</p>
+          <p id="leadOk" class="hidden text-emerald-700 text-sm mt-2">Quase lá! Indo para a página de pagamento…</p>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- Popup Pagamento -->
-  <div id="popupPagamento" class="flex items-center justify-center">
-    <div class="bg-white p-6 rounded-2xl shadow-soft w-[90%] max-w-md text-center">
-      <h2 class="text-2xl font-extrabold mb-2 text-[var(--brand)]">Pagamento R$ 9,90</h2>
-      <p class="text-slate-700 mb-4">Finalize o pagamento para receber seu plano de dieta completo no WhatsApp.</p>
-      <div id="mp-checkout" class="mb-3"></div>
-      <button onclick="fecharPopup()" class="mt-1 text-slate-500 text-sm underline">Fechar</button>
-      <p class="text-xs text-slate-400 mt-3">Pagamento processado pelo Mercado Pago. Aceitamos Pix, cartão e boleto.</p>
-    </div>
-  </div>
-
   <!-- Footer -->
   <footer class="py-10 text-center text-sm text-slate-500">
-    <p>© <span id="year"></span> SuaMarca. Todos os direitos reservados.</p>
+    <p>© <span id="year"></span> Dieta Pronta Online. Todos os direitos reservados.</p>
     <a href="#" class="underline">Política de Privacidade</a>
   </footer>
 
   <script>
   (function(){
     // ====== CONFIG ======
-    var WHATS_NUMBER = "5519982391022";
-    var MP_PUBLIC_KEY = "APP_USR-87cc4830-2ac4-410d-82b8-f295612a75b0";
-    var MP_ENDPOINT = "https://dietapronta.online/api/mp-preference";
+    var WHATS_NUMBER = "55619998514680"; // seu número com DDI
+    // Página de pagamento sem popup:
+    var PAGAMENTO_URL = "/pagamento/";
 
     // ====== PERFIS ======
     var PROFILES = {
@@ -268,7 +256,7 @@
             var id = "q"+i+"_"+letter;
             html += '<div class="choice">';
             html += '<input class="peer hidden" type="radio" id="'+id+'" name="q'+i+'" value="'+letter+'" required />';
-            html += '<label for="'+id+'" class="block">'+ item.a[j] +'</label>';
+            html += '<label for="'+id+'" class="block text-[1.05rem]">'+ item.a[j] +'</label>';
             html += '</div>';
           }
           html += '</div></fieldset>';
@@ -319,7 +307,7 @@
       $("progress").style.width = "100%"; $("pct").textContent = "100%";
     }
 
-    // Avanço automático
+    // Avanço automático nas perguntas
     document.addEventListener("change", function(e){
       var t = e.target; if(!t || t.type !== "radio") return;
       var fs = t.closest("fieldset.step"); if(!fs) return;
@@ -331,73 +319,42 @@
     // Voltar
     $("btnPrev").addEventListener("click", function(e){ e.preventDefault(); prevStep(); });
 
-    // ====== PAGAMENTO ======
-
-    // Gerador simples de external_reference
-    function uuidRef(){
-      return 'ref-' + Date.now() + '-' + Math.random().toString(36).slice(2,8);
-    }
+    // ====== LEAD + REDIRECIONAMENTO PARA PAGAMENTO ======
+    function uuidRef(){ return 'ref-' + Date.now() + '-' + Math.random().toString(36).slice(2,8); }
 
     function handleLead(e){
       e.preventDefault();
+
+      var nome  = $("nome").value.trim();
+      var email = $("email").value.trim();
+      var whats = $("whats").value.trim();
+
+      try {
+        localStorage.setItem('lead_nome',  nome);
+        localStorage.setItem('lead_email', email);
+        localStorage.setItem('lead_whats', whats);
+      } catch(err) { console.warn('Erro salvando lead:', err); }
+
       $("leadOk").classList.remove("hidden");
-      abrirPopupPagamento();
+
+      // Garante um external_reference e redireciona para /pagamento
+      var ref = null;
+      try { ref = localStorage.getItem('mp_external_ref'); } catch(e){}
+      if(!ref){ ref = uuidRef(); try { localStorage.setItem('mp_external_ref', ref); } catch(e){} }
+
+      // (opcional) incluir dados na URL, a página /pagamento também lê esses valores
+      var u = new URL(PAGAMENTO_URL, location.origin);
+      u.searchParams.set('ref', ref);
+      u.searchParams.set('nome', nome);
+      u.searchParams.set('email', email);
+      u.searchParams.set('whats', whats);
+
+      location.href = u.toString();
       return false;
     }
     window.handleLead = handleLead;
 
-    function abrirPopupPagamento(){
-      var popup = $("popupPagamento");
-      popup.style.display = "flex";
-      var container = $("mp-checkout");
-      container.innerHTML = "";
-
-      var mp = new MercadoPago(MP_PUBLIC_KEY, { locale: "pt-BR" });
-
-      // 1) Criar external_reference único e salvar
-      var ref = uuidRef();
-      try { localStorage.setItem('mp_external_ref', ref); } catch(e){}
-
-      // 2) Timeout de segurança
-      var timeout = new Promise(function(_, rej){ setTimeout(function(){ rej(new Error('Timeout criando preferência')); }, 12000); });
-
-      // 3) Enviar ref ao backend
-      var req = fetch(MP_ENDPOINT, {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ valor: 1.90, titulo: "Plano de Dieta Completo", external_reference: ref })
-      })
-      .then(function(r){ return r.text().then(function(txt){ var data={}; try{data=JSON.parse(txt);}catch{} if(!r.ok) throw new Error("HTTP "+r.status+" "+txt); if(!data.id) throw new Error("Preferência sem id: "+txt); return data; }); });
-
-      Promise.race([timeout, req])
-        .then(function(data){
-          mp.checkout({ preference: { id: data.id }, render: { container: "#mp-checkout", label: "Pagar R$ 9,90" } });
-          if(data.init_point){
-            try { window.open(data.init_point, "_blank"); } catch(e){}
-            var a = document.createElement("a");
-            a.href = data.init_point; a.target = "_blank"; a.rel = "noopener";
-            a.className = "block mt-3 text-sm underline";
-            a.textContent = "⚠️ Se o botão não abrir, clique aqui para pagar";
-            container.appendChild(a);
-          }
-        })
-        .catch(function(err){
-          console.error("[MP] Falha:", err);
-          container.innerHTML = '<p class="text-sm text-red-600">Não foi possível iniciar o pagamento agora. Tente novamente em alguns instantes.</p>';
-        });
-    }
-    window.fecharPopup = function(){ $("popupPagamento").style.display = "none"; };
-
-    function abrirWhatsAppComResultado(){
-      var nome = $("nome").value.trim();
-      var result = $("resultTitle").textContent;
-      var desc = $("resultDesc").textContent;
-      var texto = "Oi, sou " + nome + ". Meu resultado no Quiz de Dieta foi: " + result + ".\nResumo: " + desc + "\nPagamento confirmado. Quero receber meu plano completo.";
-      var link = "https://wa.me/" + WHATS_NUMBER + "?text=" + encodeURIComponent(texto);
-      window.open(link, "_blank");
-    }
-
-    // ====== DETECÇÃO DE STATUS (approved/pending/failure) + POLLING ======
+    // ====== STATUS de retorno pós-pagamento (approved/pending/failure) ======
     (function detectarStatus(){
       var p = new URLSearchParams(location.search);
       var status = p.get("status");
@@ -409,12 +366,20 @@
         banner.classList.remove("hidden");
       }
 
+      function abrirWhatsAppComResultado(){
+        var nome = $("nome") ? $("nome").value.trim() : (localStorage.getItem('lead_nome') || '');
+        var result = $("resultTitle").textContent || 'Plano de dieta';
+        var desc = $("resultDesc").textContent || '';
+        var texto = "Oi, sou " + nome + ". Meu resultado no Quiz de Dieta foi: " + result + ".\nResumo: " + desc + "\nPagamento confirmado. Quero receber meu plano completo.";
+        var link = "https://wa.me/" + WHATS_NUMBER + "?text=" + encodeURIComponent(texto);
+        window.open(link, "_blank");
+      }
+
       if(status === "approved"){
-        if (window.fecharPopup) window.fecharPopup();
+        // WhatsApp abre automaticamente
         setTimeout(abrirWhatsAppComResultado, 300);
         return;
       }
-
       if(status === "failure"){
         showBanner(
           "Pagamento não aprovado. Você pode tentar novamente com Pix, outro cartão ou outro método.",
@@ -422,48 +387,17 @@
         );
         return;
       }
-
       if(status === "pending"){
         showBanner(
           "Pagamento pendente. Se foi Pix, a confirmação costuma sair em alguns minutos. Assim que for aprovado, liberamos seu plano.",
           "bg-amber-50 border-amber-300 text-amber-800"
         );
-        // Botão manual
-        var btn = document.createElement("button");
-        btn.className = "mt-2 inline-flex items-center gap-2 rounded-xl px-3 py-2 border border-slate-300 text-sm";
-        btn.textContent = "Já paguei / Verificar pagamento";
-        btn.onclick = function(e){ e.preventDefault(); checarAgora(); };
-        banner.appendChild(btn);
-
-        // Polling leve a cada 12s
-        var timer = setInterval(checarAgora, 12000);
-
-        async function checarAgora(){
-          var ref = null;
-          try { ref = localStorage.getItem('mp_external_ref'); } catch(e) {}
-          if (!ref) return; // ainda não abriu o pagamento nesta sessão
-
-          try {
-            const r = await fetch('/api/mp-check-status?ref=' + encodeURIComponent(ref));
-            const data = await r.json();
-            // console.log('[check-status]', data);
-
-            if (data && data.found && data.status === 'approved') {
-              clearInterval(timer);
-              if (window.fecharPopup) window.fecharPopup();
-              setTimeout(abrirWhatsAppComResultado, 300);
-            }
-          } catch (e) {
-            // silencioso
-          }
-        }
       }
     })();
 
     // ====== INIT ======
     document.getElementById("year").textContent = new Date().getFullYear();
     renderQuestions();
-
   })();
   </script>
 </body>
